k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers: 
      - name: gateway
        image: melek4000/gateway:v1
        ports:
        - containerPort: 3000
      resources:           # <--- THIS IS WHAT IS MISSING
          requests:
            cpu: "100m"      # Required for HPA to calculate %
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shipment
  template:
    metadata:
      labels:
        app: shipment
    spec:
      containers:
      - name: shipment
        image: melek4000/shipment:v1
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "100m"    
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
