k8s/base/service.yaml
# NodePort + ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: shipment-svc
spec:
  selector:
    app: shipment
  ports:
  - port: 80
    targetPort: 3001
